# pedal-build-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
app/: db.py  main.py  manifest.py  storage.py
app/routes/: admin.py  board.py
app/templates/: about.html  admin.html  base.html  board.html  drill_template.html  index.html
data/: boards.db  builder.db
data/boards/fx-bloodyg/1.0.0/: manifest.json
data/boards/fx-sixseven/1.0.0/: blurb.md  manifest.json
deploy/: Caddyfile  Caddyfile.example  add-user.sh  backup.sh  pedal-build-manager.service  update.sh
docs/: admin-auth.md  deploy.md
tests/: test_admin_auth.py  test_admin_upload.py  test_db.py  test_manifest.py  test_routes.py  test_storage.py
