[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pedal-build-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "referencing>=0.28",
    "markdown>=3.5",
    "kicad-pedal-common @ git+https://github.com/z2amiller/kicad-pedal-common.git",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
